@@ -10,7 +10,7 @@
 		<h3><tt>ntpd</tt> System Log Messages</h3>
 		<img src="pic/alice47.gif" alt="gif" align="left"><a href="http://www.eecis.udel.edu/~mills/pictures.html">from <i>Alice's Adventures in Wonderland</i>, Lewis Carroll</a>
 		<p>The mushroom knows all the error codes, which is more than most of us do.</p>
-		<p>Last update: <csobj format="ShortTime" h="25" locale="00000409" region="0" t="DateTime" w="61">19:24</csobj> UTC <csobj format="LongDate" h="25" locale="00000409" region="0" t="DateTime" w="284">Saturday, October 01, 2005</csobj></p>
+		<p>Last update: <csobj format="ShortTime" h="25" locale="00000409" region="0" t="DateTime" w="61">15:20</csobj> UTC <csobj format="LongDate" h="25" locale="00000409" region="0" t="DateTime" w="307">Wednesday, October 31, 2007</csobj></p>
 		<br clear="left">
 		<h4>Related Links</h4>
 		<p><script type="text/javascript" language="javascript" src="scripts/links7.txt"></script>
@@ -32,7 +32,7 @@
 			<dd>In <tt>ntpdate</tt> mode no servers have been found. The server(s) and/or network may be down. Standard debugging procedures apply.
 				<p><tt><b>LOG_INFO</b></tt></p>
 			<dt><tt>proto_config: illegal item ?, value ?</tt>
-			<dd>Program error. Please report to bugs@ntp.org.
+			<dd>Program error. Bugs can be reported <a href="bugs.html">here</a>.
 			<dt><tt>pps sync enabled</tt>
 			<dd>The PPS signal has been detected and enabled.
 			<dt><tt>transmit: encryption key ? not found</tt>
@@ -51,7 +51,7 @@
 			<dd>Fatal error. Better do what it says, then restart the daemon. Be advised NTP and Unix know nothing about local time zones. The clock must be set to Coordinated Universal Time (UTC). Believe it; by international agreement abbreviations are in French and descriptions are in English.
 			<dt><tt>sigaction() fails to save SIGSYS trap: ?<br>
 				</tt><tt>sigaction() fails to restore SIGSYS trap: ?</tt>
-			<dt>Program error. Please report to bugs@ntp.org.
+			<dt>Program error. Bugs can be reported <a href="bugs.html">here</a>.
 		</dl>
 		<p><tt><b>LOG_NOTICE</b></tt></p>
 		<dl>
